crates/bevy_derive/compile_fail/tests/deref_derive/missing_attribute_fail.rs
use bevy_derive::Deref;

#[derive(Deref)]
//~^ ERROR: requires one field to have
struct TupleStruct(usize, String);

#[derive(Deref)]
//~^ ERROR: requires one field to have
struct Struct {
    foo: usize,
    bar: String,
}
